<resources>
    <string name="app_name">urTurn</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_log_in">logIn</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Nav_Home">Home</string>
    <string name="nav_user">Profile</string>
    <string name="nav_create">Chore</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_edit" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_chore">Complete Chore</string>
    <string name="edit_chores">Edit Chores</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="stan_lee">Stan Lee</string>
    <string name="code">Code</string>
</resources>
