<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_white_24dp"
        android:title="@string/Nav_Home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_white_24dp"
        android:title="@string/nav_user" />
    <item
        android:id="@+id/nav_chore"
        android:icon="@drawable/baseline_create_white_24dp"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/baseline_history_white_24dp"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_white_24dp"
        android:title="@string/nav_settings" />
</menu>